// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`should apply .editorconfig sections and keep oxfmt overrides higher priority 1`] = `
{
  "fixture": "editorconfig-sections",
  "summary": [
    {
      "file": "scripts/sectioned.ts",
      "messages": [
        {
          "column": 27,
          "endColumn": 39,
          "endLine": 1,
          "fix": {
            "text": "
	name: string,
",
          },
          "line": 1,
          "message": "Replace \`name:·string\` with \`⏎↹name:·string,⏎\`",
          "messageId": "replace",
          "ruleId": "oxfmt/oxfmt",
          "severity": 2,
        },
        {
          "column": 1,
          "endColumn": 62,
          "endLine": 2,
          "fix": {
            "text": "	return createUserProfile(
		name,
		'a very long display name',
	",
          },
          "line": 2,
          "message": "Replace \`····return·createUserProfile(name,·"a·very·long·display·name"\` with \`↹return·createUserProfile(⏎↹↹name,⏎↹↹'a·very·long·display·name',⏎↹\`",
          "messageId": "replace",
          "ruleId": "oxfmt/oxfmt",
          "severity": 2,
        },
        {
          "column": 2,
          "endColumn": 1,
          "endLine": 4,
          "fix": {
            "text": "",
          },
          "line": 3,
          "message": "Delete \`⏎\`",
          "messageId": "delete",
          "ruleId": "oxfmt/oxfmt",
          "severity": 2,
        },
      ],
      "output": "export function buildUser(
	name: string,
) {
	return createUserProfile(
		name,
		'a very long display name',
	);
}",
    },
    {
      "file": "src/override.ts",
      "messages": [
        {
          "column": 27,
          "endColumn": 39,
          "endLine": 1,
          "fix": {
            "text": "
  name: string,
",
          },
          "line": 1,
          "message": "Replace \`name:·string\` with \`⏎··name:·string,⏎\`",
          "messageId": "replace",
          "ruleId": "oxfmt/oxfmt",
          "severity": 2,
        },
        {
          "column": 1,
          "endColumn": 62,
          "endLine": 2,
          "fix": {
            "text": "  return createUserProfile(
    name,
    'a very long display name',
  ",
          },
          "line": 2,
          "message": "Replace \`····return·createUserProfile(name,·"a·very·long·display·name"\` with \`··return·createUserProfile(⏎····name,⏎····'a·very·long·display·name',⏎··\`",
          "messageId": "replace",
          "ruleId": "oxfmt/oxfmt",
          "severity": 2,
        },
        {
          "column": 2,
          "endColumn": 1,
          "endLine": 4,
          "fix": {
            "text": "",
          },
          "line": 3,
          "message": "Delete \`⏎\`",
          "messageId": "delete",
          "ruleId": "oxfmt/oxfmt",
          "severity": 2,
        },
      ],
      "output": "export function buildUser(
  name: string,
) {
  return createUserProfile(
    name,
    'a very long display name',
  );
}",
    },
    {
      "file": "src/sectioned.js",
      "messages": [
        {
          "column": 27,
          "endColumn": 31,
          "endLine": 1,
          "fix": {
            "text": "
     name,
",
          },
          "line": 1,
          "message": "Replace \`name\` with \`⏎·····name,⏎\`",
          "messageId": "replace",
          "ruleId": "oxfmt/oxfmt",
          "severity": 2,
        },
        {
          "column": 1,
          "endColumn": 62,
          "endLine": 2,
          "fix": {
            "text": "     return createUserProfile(
          name,
          'a very long display name',
     ",
          },
          "line": 2,
          "message": "Replace \`····return·createUserProfile(name,·"a·very·long·display·name"\` with \`·····return·createUserProfile(⏎··········name,⏎··········'a·very·long·display·name',⏎·····\`",
          "messageId": "replace",
          "ruleId": "oxfmt/oxfmt",
          "severity": 2,
        },
        {
          "column": 2,
          "endColumn": 1,
          "endLine": 4,
          "fix": {
            "text": "",
          },
          "line": 3,
          "message": "Delete \`⏎\`",
          "messageId": "delete",
          "ruleId": "oxfmt/oxfmt",
          "severity": 2,
        },
      ],
      "output": "export function buildUser(
     name,
) {
     return createUserProfile(
          name,
          'a very long display name',
     );
}",
    },
  ],
}
`;

exports[`should apply .editorconfig settings when no oxfmt config exists 1`] = `
{
  "fixture": "editorconfig-only",
  "summary": [
    {
      "file": "src/example.js",
      "messages": [],
      "output": null,
    },
  ],
}
`;

exports[`should lint work > ts.ts 1`] = `
[
  {
    "column": 1,
    "endColumn": 31,
    "endLine": 7,
    "fix": {
      "text": "console.log("hello world");",
    },
    "line": 7,
    "message": "Replace \`····console.log('hello·world')\` with \`console.log("hello·world");\`",
    "messageId": "replace",
    "ruleId": "oxfmt/oxfmt",
    "severity": 2,
  },
  {
    "column": 14,
    "endColumn": 22,
    "endLine": 10,
    "fix": {
      "text": ""foobar"",
    },
    "line": 10,
    "message": "Replace \`'foobar'\` with \`"foobar"\`",
    "messageId": "replace",
    "ruleId": "oxfmt/oxfmt",
    "severity": 2,
  },
  {
    "column": 21,
    "endColumn": 65,
    "endLine": 13,
    "fix": {
      "text": " omgSoManyParameters(), IShouldRefactorThis(), ",
    },
    "line": 13,
    "message": "Replace \`omgSoManyParameters(),IShouldRefactorThis(),\` with \`·omgSoManyParameters(),·IShouldRefactorThis(),·\`",
    "messageId": "replace",
    "ruleId": "oxfmt/oxfmt",
    "severity": 2,
  },
  {
    "column": 33,
    "endColumn": 33,
    "endLine": 16,
    "fix": {
      "text": ";",
    },
    "line": 16,
    "message": "Insert \`;\`",
    "messageId": "insert",
    "ruleId": "oxfmt/oxfmt",
    "severity": 2,
  },
  {
    "column": 9,
    "endColumn": 17,
    "endLine": 20,
    "fix": {
      "text": ""foobar"",
    },
    "line": 20,
    "message": "Replace \`'foobar'\` with \`"foobar"\`",
    "messageId": "replace",
    "ruleId": "oxfmt/oxfmt",
    "severity": 2,
  },
  {
    "column": 2,
    "endColumn": 2,
    "endLine": 22,
    "fix": {
      "text": ";",
    },
    "line": 22,
    "message": "Insert \`;\`",
    "messageId": "insert",
    "ruleId": "oxfmt/oxfmt",
    "severity": 2,
  },
  {
    "column": 3,
    "endColumn": 19,
    "endLine": 26,
    "fix": {
      "text": "name: "foobar",",
    },
    "line": 26,
    "message": "Replace \`'name':·'foobar'\` with \`name:·"foobar",\`",
    "messageId": "replace",
    "ruleId": "oxfmt/oxfmt",
    "severity": 2,
  },
  {
    "column": 2,
    "endColumn": 2,
    "endLine": 27,
    "fix": {
      "text": ";",
    },
    "line": 27,
    "message": "Insert \`;\`",
    "messageId": "insert",
    "ruleId": "oxfmt/oxfmt",
    "severity": 2,
  },
]
`;

exports[`should load .oxfmtrc.json 1`] = `
{
  "fixture": "json",
  "summary": [
    {
      "file": "src/example.js",
      "messages": [
        {
          "column": 3,
          "endColumn": 32,
          "endLine": 2,
          "fix": {
            "text": "console.log(
    'hello world',
  )",
          },
          "line": 2,
          "message": "Replace \`··console.log("hello·world");\` with \`console.log(⏎····'hello·world',⏎··)\`",
          "messageId": "replace",
          "ruleId": "oxfmt/oxfmt",
          "severity": 2,
        },
        {
          "column": 8,
          "endColumn": 43,
          "endLine": 5,
          "fix": {
            "text": "
  reallyLongArg(),
  anotherLongArg(),",
          },
          "line": 5,
          "message": "Replace \`reallyLongArg(),·anotherLongArg());\` with \`⏎··reallyLongArg(),⏎··anotherLongArg(),\`",
          "messageId": "replace",
          "ruleId": "oxfmt/oxfmt",
          "severity": 2,
        },
        {
          "column": 1,
          "endColumn": 1,
          "endLine": 6,
          "fix": {
            "text": ")",
          },
          "line": 6,
          "message": "Insert \`)\`",
          "messageId": "insert",
          "ruleId": "oxfmt/oxfmt",
          "severity": 2,
        },
      ],
      "output": "export function greet() {
  console.log(
    'hello world',
  )
}

format(
  reallyLongArg(),
  anotherLongArg(),
)",
    },
  ],
}
`;

exports[`should load .oxfmtrc.jsonc 1`] = `
{
  "fixture": "jsonc",
  "summary": [
    {
      "file": "src/example.js",
      "messages": [
        {
          "column": 3,
          "endColumn": 32,
          "endLine": 2,
          "fix": {
            "text": "console.log(
    'hello world',
  )",
          },
          "line": 2,
          "message": "Replace \`··console.log("hello·world");\` with \`console.log(⏎····'hello·world',⏎··)\`",
          "messageId": "replace",
          "ruleId": "oxfmt/oxfmt",
          "severity": 2,
        },
        {
          "column": 8,
          "endColumn": 43,
          "endLine": 5,
          "fix": {
            "text": "
  reallyLongArg(),
  anotherLongArg(),",
          },
          "line": 5,
          "message": "Replace \`reallyLongArg(),·anotherLongArg());\` with \`⏎··reallyLongArg(),⏎··anotherLongArg(),\`",
          "messageId": "replace",
          "ruleId": "oxfmt/oxfmt",
          "severity": 2,
        },
        {
          "column": 1,
          "endColumn": 1,
          "endLine": 6,
          "fix": {
            "text": ")",
          },
          "line": 6,
          "message": "Insert \`)\`",
          "messageId": "insert",
          "ruleId": "oxfmt/oxfmt",
          "severity": 2,
        },
      ],
      "output": "export function greet() {
  console.log(
    'hello world',
  )
}

format(
  reallyLongArg(),
  anotherLongArg(),
)",
    },
  ],
}
`;

exports[`should load oxfmt.config.ts 1`] = `
{
  "fixture": "ts-config",
  "summary": [
    {
      "file": "src/example.js",
      "messages": [
        {
          "column": 3,
          "endColumn": 32,
          "endLine": 2,
          "fix": {
            "text": "console.log(
    'hello world',
  )",
          },
          "line": 2,
          "message": "Replace \`··console.log("hello·world");\` with \`console.log(⏎····'hello·world',⏎··)\`",
          "messageId": "replace",
          "ruleId": "oxfmt/oxfmt",
          "severity": 2,
        },
        {
          "column": 8,
          "endColumn": 43,
          "endLine": 5,
          "fix": {
            "text": "
  reallyLongArg(),
  anotherLongArg(),",
          },
          "line": 5,
          "message": "Replace \`reallyLongArg(),·anotherLongArg());\` with \`⏎··reallyLongArg(),⏎··anotherLongArg(),\`",
          "messageId": "replace",
          "ruleId": "oxfmt/oxfmt",
          "severity": 2,
        },
        {
          "column": 1,
          "endColumn": 1,
          "endLine": 6,
          "fix": {
            "text": ")",
          },
          "line": 6,
          "message": "Insert \`)\`",
          "messageId": "insert",
          "ruleId": "oxfmt/oxfmt",
          "severity": 2,
        },
      ],
      "output": "export function greet() {
  console.log(
    'hello world',
  )
}

format(
  reallyLongArg(),
  anotherLongArg(),
)",
    },
  ],
}
`;

exports[`should match config-derived overrides relative to config directory, not ESLint cwd > packages/a/src/example.ts 1`] = `
[
  {
    "column": 27,
    "endColumn": 39,
    "endLine": 1,
    "fix": {
      "text": "
  name: string,
",
    },
    "line": 1,
    "message": "Replace \`name:·string\` with \`⏎··name:·string,⏎\`",
    "messageId": "replace",
    "ruleId": "oxfmt/oxfmt",
    "severity": 2,
  },
  {
    "column": 1,
    "endColumn": 62,
    "endLine": 2,
    "fix": {
      "text": "  return createUserProfile(
    name,
    'a very long display name',
  ",
    },
    "line": 2,
    "message": "Replace \`····return·createUserProfile(name,·"a·very·long·display·name"\` with \`··return·createUserProfile(⏎····name,⏎····'a·very·long·display·name',⏎··\`",
    "messageId": "replace",
    "ruleId": "oxfmt/oxfmt",
    "severity": 2,
  },
]
`;

exports[`should match config-derived overrides relative to config directory, not ESLint cwd > packages/a/src/normal.js 1`] = `
[
  {
    "column": 3,
    "endColumn": 30,
    "endLine": 2,
    "fix": {
      "text": "console.log('hello world'",
    },
    "line": 2,
    "message": "Replace \`··console.log("hello·world"\` with \`console.log('hello·world'\`",
    "messageId": "replace",
    "ruleId": "oxfmt/oxfmt",
    "severity": 2,
  },
]
`;

exports[`should merge .editorconfig with .oxfmtrc.json 1`] = `
{
  "fixture": "json-with-editorconfig",
  "summary": [
    {
      "file": "src/example.js",
      "messages": [
        {
          "column": 3,
          "endColumn": 32,
          "endLine": 2,
          "fix": {
            "text": "console.log('hello world')",
          },
          "line": 2,
          "message": "Replace \`··console.log("hello·world");\` with \`console.log('hello·world')\`",
          "messageId": "replace",
          "ruleId": "oxfmt/oxfmt",
          "severity": 2,
        },
        {
          "column": 42,
          "endColumn": 43,
          "endLine": 5,
          "fix": {
            "text": "",
          },
          "line": 5,
          "message": "Delete \`;\`",
          "messageId": "delete",
          "ruleId": "oxfmt/oxfmt",
          "severity": 2,
        },
      ],
      "output": "export function greet() {
  console.log('hello world')
}

format(reallyLongArg(), anotherLongArg())
",
    },
  ],
}
`;

exports[`should merge .editorconfig with .oxfmtrc.jsonc 1`] = `
{
  "fixture": "jsonc-with-editorconfig",
  "summary": [
    {
      "file": "src/example.js",
      "messages": [
        {
          "column": 3,
          "endColumn": 32,
          "endLine": 2,
          "fix": {
            "text": "console.log('hello world')",
          },
          "line": 2,
          "message": "Replace \`··console.log("hello·world");\` with \`console.log('hello·world')\`",
          "messageId": "replace",
          "ruleId": "oxfmt/oxfmt",
          "severity": 2,
        },
        {
          "column": 42,
          "endColumn": 43,
          "endLine": 5,
          "fix": {
            "text": "",
          },
          "line": 5,
          "message": "Delete \`;\`",
          "messageId": "delete",
          "ruleId": "oxfmt/oxfmt",
          "severity": 2,
        },
      ],
      "output": "export function greet() {
  console.log('hello world')
}

format(reallyLongArg(), anotherLongArg())
",
    },
  ],
}
`;

exports[`should merge .editorconfig with oxfmt.config.ts 1`] = `
{
  "fixture": "ts-with-editorconfig",
  "summary": [
    {
      "file": "src/example.js",
      "messages": [
        {
          "column": 3,
          "endColumn": 32,
          "endLine": 2,
          "fix": {
            "text": "console.log('hello world')",
          },
          "line": 2,
          "message": "Replace \`··console.log("hello·world");\` with \`console.log('hello·world')\`",
          "messageId": "replace",
          "ruleId": "oxfmt/oxfmt",
          "severity": 2,
        },
        {
          "column": 42,
          "endColumn": 43,
          "endLine": 5,
          "fix": {
            "text": "",
          },
          "line": 5,
          "message": "Delete \`;\`",
          "messageId": "delete",
          "ruleId": "oxfmt/oxfmt",
          "severity": 2,
        },
      ],
      "output": "export function greet() {
  console.log('hello world')
}

format(reallyLongArg(), anotherLongArg())
",
    },
  ],
}
`;

exports[`should prefer .oxfmtrc.json over .oxfmtrc.jsonc and oxfmt.config.ts 1`] = `
{
  "fixture": "config-priority",
  "summary": [
    {
      "file": "src/example.js",
      "messages": [
        {
          "column": 3,
          "endColumn": 32,
          "endLine": 2,
          "fix": {
            "text": "console.log('hello world')",
          },
          "line": 2,
          "message": "Replace \`··console.log("hello·world");\` with \`console.log('hello·world')\`",
          "messageId": "replace",
          "ruleId": "oxfmt/oxfmt",
          "severity": 2,
        },
        {
          "column": 2,
          "endColumn": 1,
          "endLine": 4,
          "fix": {
            "text": "",
          },
          "line": 3,
          "message": "Delete \`⏎\`",
          "messageId": "delete",
          "ruleId": "oxfmt/oxfmt",
          "severity": 2,
        },
      ],
      "output": "export function greet() {
  console.log('hello world')
}",
    },
  ],
}
`;

exports[`should prioritize rule ignorePatterns over .oxfmtrc ignorePatterns > ignored/unformatted.js 1`] = `
[
  {
    "column": 22,
    "endColumn": 22,
    "endLine": 1,
    "fix": {
      "text": ";",
    },
    "line": 1,
    "message": "Insert \`;\`",
    "messageId": "insert",
    "ruleId": "oxfmt/oxfmt",
    "severity": 2,
  },
]
`;

exports[`should prioritize rule ignorePatterns over .oxfmtrc ignorePatterns > src/unformatted.js 1`] = `[]`;

exports[`should resolve nearest .editorconfig per file path 1`] = `
{
  "fixture": "nearest-editorconfig",
  "summary": [
    {
      "file": "src/nested/child.js",
      "messages": [
        {
          "column": 33,
          "endColumn": 37,
          "endLine": 1,
          "fix": {
            "text": "
      name,
",
          },
          "line": 1,
          "message": "Replace \`name\` with \`⏎······name,⏎\`",
          "messageId": "replace",
          "ruleId": "oxfmt/oxfmt",
          "severity": 2,
        },
        {
          "column": 1,
          "endColumn": 62,
          "endLine": 2,
          "fix": {
            "text": "      return createUserProfile(
            name,
            'a very long display name',
      ",
          },
          "line": 2,
          "message": "Replace \`····return·createUserProfile(name,·"a·very·long·display·name"\` with \`······return·createUserProfile(⏎············name,⏎············'a·very·long·display·name',⏎······\`",
          "messageId": "replace",
          "ruleId": "oxfmt/oxfmt",
          "severity": 2,
        },
        {
          "column": 2,
          "endColumn": 1,
          "endLine": 4,
          "fix": {
            "text": "",
          },
          "line": 3,
          "message": "Delete \`⏎\`",
          "messageId": "delete",
          "ruleId": "oxfmt/oxfmt",
          "severity": 2,
        },
      ],
      "output": "export function buildNestedUser(
      name,
) {
      return createUserProfile(
            name,
            'a very long display name',
      );
}",
    },
    {
      "file": "src/root.js",
      "messages": [
        {
          "column": 3,
          "endColumn": 62,
          "endLine": 2,
          "fix": {
            "text": "return createUserProfile(
    name,
    'a very long display name',
  ",
          },
          "line": 2,
          "message": "Replace \`··return·createUserProfile(name,·"a·very·long·display·name"\` with \`return·createUserProfile(⏎····name,⏎····'a·very·long·display·name',⏎··\`",
          "messageId": "replace",
          "ruleId": "oxfmt/oxfmt",
          "severity": 2,
        },
        {
          "column": 2,
          "endColumn": 1,
          "endLine": 4,
          "fix": {
            "text": "",
          },
          "line": 3,
          "message": "Delete \`⏎\`",
          "messageId": "delete",
          "ruleId": "oxfmt/oxfmt",
          "severity": 2,
        },
      ],
      "output": "export function buildRootUser(name) {
  return createUserProfile(
    name,
    'a very long display name',
  );
}",
    },
  ],
}
`;

exports[`should respect ignorePatterns from .oxfmtrc when useConfig is true > ignored/unformatted.js 1`] = `[]`;

exports[`should respect ignorePatterns from .oxfmtrc when useConfig is true > src/unformatted.js 1`] = `
[
  {
    "column": 27,
    "endColumn": 27,
    "endLine": 1,
    "fix": {
      "text": ";",
    },
    "line": 1,
    "message": "Insert \`;\`",
    "messageId": "insert",
    "ruleId": "oxfmt/oxfmt",
    "severity": 2,
  },
]
`;
